--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = ">=3.8,<3.11"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 black = "^21.9b0"
+pytest-cov = "^3.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
