--- a/.github/workflows/cpp_build.yml
+++ b/.github/workflows/cpp_build.yml
@@ -44,3 +44,8 @@ jobs:
         # Execute tests defined by the CMake configuration.
         # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
         run: ctest -C ${{env.BUILD_TYPE}}
+
+      - name: Benchmark
+        working-directory: ${{github.workspace}}/build
+        # Execute benchmarks defined by the CMake configuration.
+        run: ./benchmarks/bench_*
