--- a/{{cookiecutter.project_name}}/.github/workflows/python_ci.yml
+++ b/{{cookiecutter.project_name}}/.github/workflows/python_ci.yml
@@ -25,9 +25,9 @@ jobs:
         id: cache
         with:
           path: ~/.virtualenvs
-          key: poetry-${{ hashFiles('**/poetry.lock') }}
+          key: poetry-${{ "{{" }} hashFiles('**/poetry.lock') {{ "}}" }}
           restore-keys: |
-            poetry-${{ hashFiles('**/poetry.lock') }}
+            poetry-${{ "{{" }} hashFiles('**/poetry.lock') {{ "}}" }}
 
       - name: Install Dependencies
         run: poetry install
