--- a/{{cookiecutter.project_name}}/mkdocs.yml
+++ b/{{cookiecutter.project_name}}/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: ProjectTemplate Docs
+site_name: {{project_name}} Docs
 theme:
   name: material
 
@@ -7,6 +7,6 @@ markdown_extensions:
       generic: true
 
 extra_javascript:
-  - javascripts/config.js
+  - docs/javascripts/config.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
