Do git branch switching in make command

--- a/{{cookiecutter.project_name}}/Makefile
+++ b/{{cookiecutter.project_name}}/Makefile
@@ -22,4 +22,8 @@ cmake_cpp:
 	cmake --build build
 
 update_from_template:
+	git switch template
 	cruft update
+	git commit -am "Update from template"
+	git switch main
+	git merge template
